--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -168,7 +168,8 @@
                 <script type="text/javascript">
                   $(function () {
                     $('#datetimepicker1').datetimepicker({
-                      format : 'YYYY-MM-DD'
+                      format : 'YYYY-MM-DD',
+                      minDate: new Date()
                     });
                   });
                 </script>
