--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -238,7 +238,7 @@
 
   <div class="col-sm-10">
     <div style="text-align:center">
-      <h3><%=@chat.title %></h3>
+      <h3 style="margin-top:0px;"><%=@chat.title %></h3>
     </div>
     <div style="text-align:center">
       <div class="row">
@@ -467,13 +467,7 @@
         $('#messagelookall').submit();
       });
 
-    function onmessage(x) {
-      x.style.backgroundColor = "#F2F2F2";
-    }
-    function outmessage(x) {
-      x.style.backgroundColor = "rgba(0,0,0,0)";
 
-    }
     </script>
 
 
