--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -155,6 +155,11 @@ function notifyMe() {
 -->
 
 <script>
+
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+
 // Include the UserVoice JavaScript SDK (only needed once on a page)
 UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/nma6fghhmsHmFxYMlrLtsg.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
 //
