--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -135,7 +135,7 @@
         <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              작업 분배 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+              할 일 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
             </a>
           </h4>
         </div>
