--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -1,9 +1,9 @@
+
 <% if !flash[:notice].blank? %>
    <div class = "alert alert-info">
       <%= flash[:notice] %>
    </div>
 <% end %>
-
 
 <div class="row">
   <div class="col-sm-2">
@@ -247,22 +247,14 @@
   <!-- Homebody for Notification or Something others -->
   <div class="col-sm-10">
     <table class = "table table-bordered table-striped">
-      <thead>
-        <tr>
-           <th>Name</th>
-           <th>Download Link</th>
-           <th>Delete</th>
-        </tr>
-      </thead>
 
       <tbody>
         <% @resumes.each do |resume| %>
           <% if resume.attachment.file %>
-           <tr>
-              <td><%= resume.attachment.file.filename %></td>
-              <td><%= link_to "Download Resume", resume.attachment_url %></td>
-              <td><%= button_to "Delete",  resume, method: :delete, class: "btn btn-danger", data: {confirm: "#{resume.attachment.file.filename} 을 삭제하실 건가요?"} %></td>
-           </tr>
+            <div class="well well-sm">
+              <%= link_to resume.attachment.file.filename, resume.attachment_url, :target => "_blank" %>
+              <%= button_to "Delete",  resume, method: :delete, class: "btn btn-danger", data: {confirm: "#{resume.attachment.file.filename} 을 삭제하실 건가요?"} %>
+            </div>
           <% end %>
         <% end %>
       </tbody>
