--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -475,7 +475,7 @@
       						  </div>
       				    </div>
 
-      				    <div id="collapse<%=slideridx%>" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      				    <div id="collapse<%=slideridx%>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       				    	<div class="panel-body">
 
       				    		<div class="col-md-3">
