--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -354,8 +354,8 @@
                   <div id="<%=i%>th-gantt" class="bar-innerday bar-<%=a%>" data-date="<%=a%>" data-display ="D -<%=a%>" style="background-color: #00B0F0; overflow:hidden;"></div>
                 </div>
               </div>
-              <div class="col-xs-2" style="word-wrap:break-word; word-break:break-all;">
-                <h4 style="float:right; right:7.5%;"> <%=b.taskname %> </h4>
+              <div class="col-xs-2" style="word-wrap:break-word; word-break:break-all; text-align: right;">
+                <h4 style="padding-right: 10px;"> <%=b.taskname %> </h4>
               </div>
             </div>
             <% end %>
@@ -406,7 +406,7 @@
                     </div>
                   </div>
                   <div class="col-xs-2" style="word-wrap:break-word; word-break:break-all;">
-                    <h4 style="float:right; right:7.5%;"> <%=b.taskname %> </h4>
+                    <h4 style="padding-right: 10px;"> <%=b.taskname %> </h4>
                   </div>
                 </div>
                 <% end %>
