--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -331,7 +331,7 @@
 
       <div role="tabpanel" class="tab-pane active" id="tasklist" style="background-color: #F3F3F3;">
         <!-- gantt head -->
-        <div class="row" style="padding-left: 15px;">
+        <div class="row" style="padding-left: 15px; border-radius: 5px;">
           <div class="bar2">
             <%for i in 0..10 %>
               <% a = Date.today + i %>
