--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -384,7 +384,7 @@
 
     			<br>
 
-    			<div class="row" style="background-color: #F3F3F3; padding-left: 10px;">
+    			<div class="row" style="background-color: #F3F3F3;">
           <!-- gantt head -->
             <div class="bar2">
               <%for i in 0..10 %>
@@ -400,7 +400,7 @@
               <% end %>
               <% a = (t.duedate - (Date.today)).to_i %>
               <% if a >= 0 %>
-              <div class="row" style="background-color: #F3F3F3; padding-left: 10px;">
+              <div class="row" style="background-color: #F3F3F3;">
                 <div class="col-xs-10">
                   <div class="bar2">
                   <div class="bar2-innertask" data-task =""></div>
