--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -271,7 +271,9 @@
   		<ul class="nav nav-tabs" role="tablist" style="padding-left: 70px;">
   			<li role="presentation" class="active"><a href="#contribution" aria-controls="contribution" role="tab" data-toggle="tab">기여도</a></li>
   			<li role="presentation"><a href="#tasks" aria-controls="tasks" role="tab" data-toggle="tab">나의 할 일</a></li>
+        <li role="presentation"><a href="#tasks_complete" aria-controls="tasks_complete" role="tab" data-toggle="tab">완료한 일</a></li>
   			<li role="presentation"><a href="#sends" aria-controls="sends" role="tab" data-toggle="tab">내가 시킨 일</a></li>
+        
   		</ul>
 
   	  <!-- Tab panes -->
@@ -476,7 +478,7 @@
       						  </div>
       				    </div>
 
-      				    <div id="collapse<%=slideridx%>" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+      				    <div id="collapse<%=slideridx%>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       				    	<div class="panel-body">
 
       				    		<div class="col-md-3">
@@ -540,11 +542,59 @@
       	</div>
         <!--tab-ends-->
 
+        <!--tab-content tasks starts-->
+        <div role="tabpanel" class="tab-pane" id="tasks_complete" style="padding-left: 12px;">
+
+          <h3>완료한 일</h3>
+
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <% @task100.each_with_index do |taskdo,idx| %>
+              <div class="row" id="mediaborder">
+                <div class="col-md-5" id="task_pararell">
+                  <%sender = User.find(taskdo.sender)%>
+                  <div class="col-sm-2">
+                    <aside>
+                      <img class="img-rounded" alt="profile" src="<%=current_user.image%>" width="40px" height="40px" style="margin-top: 10px; float: left; margin-right: 8px;">
+                    </aside>
+                  </div>
+                  <div class="col-sm-2">
+                    <span class="glyphicon glyphicon-hand-right" aria-hidden="true" style="font-size: 20px; margin-top: 16px;"></span>
+                  </div>
+                  <div class="col-sm-8" id="special_down">
+                    <aside>
+                      <% taskdo.users.each do |doer| %>
+                        <img class="img-rounded" alt="profile" src="<%=doer.image%>" width="40px" height="40px" style="float: left; margin-right: 8px;">
+                        <h5 id="task_name" style="word-wrap:break-word; word-break:break-all;"> <%=doer.first_name%> <br>
+                          <%=doer.email%></h5>
+                      <% end %>
+                    </aside>
+                  </div>
+                </div>
+                <div class="col-md-3" id="task_pararell">
+                  <div class="col-xs-6" id="task_taskdue">
+                    <h5 id="task_name" style="word-wrap:break-word; word-break:break-all;"><%=taskdo.taskname%></h5>
+                  </div>
+                  <div class="col-xs-6" id="task_taskdue">
+                      <h5 id="task_name" style="word-wrap:break-word; word-break:break-all;"><%=taskdo.duedate%></h5>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="bar" id="mediachart" style="float:right;">
+                    <div class="bar-inner bar-<%=(taskdo.wansungdo).to_i %>" data-percent="<%=(taskdo.wansungdo).to_i %>%"></div>
+                  </div>
+                  <script> horild(); </script>
+                </div>
+              </div>
+            <% end %>
+          </div>
+          <!--tab-content tasks ends-->
+        </div>
+        <!--tab-ends-->
+
         <!--tab-starts-->
     	  <div role="tabpanel" class="tab-pane" id="sends" style="padding-left: 12px;">
     			<h3>내가 시킨 일</h3>
     			<% @tasksend.each_with_index do |taskdo,idx| %>
-    				<% if taskdo.wansungdo < 100 %>
       				<div class="row" id="mediaborder">
       					<div class="col-md-5" id="task_pararell">
       			    	<%sender = User.find(taskdo.sender)%>
@@ -581,7 +631,6 @@
       						<script> horild(); </script>
       					</div>
       				</div>
-    				<% end %>
     			<% end %>
     		</div>
     	  <!-- Tab ends -->
