--- a/app/assets/stylesheets/bootstrap-slider.css
+++ b/app/assets/stylesheets/bootstrap-slider.css
@@ -59,7 +59,7 @@
   border-width: 0 10px 10px 10px;
   width: 0;
   height: 0;
-  border-bottom-color: #52D5CC;
+  border-bottom-color: #0480be;
   margin-top: 0;
 }
 .slider.slider-horizontal .slider-tick-label-container {
