--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-2">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
+        <div class="panel-heading" role="tab" id="headingZero">
           <h4 class="panel-title">
             <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne" style="font-family: 'Jeju Gothic', sans-serif;">
               팀 홈으로 가기<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
