--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -172,27 +172,35 @@
                   });
                 </script>
                 <!-- My Profile -->
-                <div class="col-xs-3">
-                  <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
-                </div>
-                <div class="col-xs-6">
-                  <%=current_user.first_name%>
-                </div>
-                <div id="profile_me" class="col-xs-3 checkbox">
-                  <%= check_box_tag('user_ids[]', current_user.id) %><br />
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div class="col-xs-3">
+                      <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
+                    </div>
+                    <div class="col-xs-6">
+                      <%=current_user.first_name%>
+                    </div>
+                    <div id="profile_me" class="col-xs-3 checkbox">
+                      <%= check_box_tag('user_ids[]', current_user.id) %><br />
+                    </div>
+                  </div>
                 </div>
 
                 <!-- Others Profile -->
                 <% temp.each_with_index do |t,idx| %>
                   <% if t.id != current_user.id %>
-                    <div class="col-xs-3">
-                      <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
-                    </div>
-                    <div class="col-xs-6">
-                      <%=t.first_name%>
-                    </div>
-                    <div id="profile_me" class="col-xs-3 checkbox">
-                      <%= check_box_tag('user_ids[]', t.id) %>
+                    <div class="row">
+                      <div class="col-sm-12">
+                        <div class="col-xs-3">
+                          <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
+                        </div>
+                        <div class="col-xs-6">
+                          <%=t.first_name%>
+                        </div>
+                        <div id="profile_me" class="col-xs-3 checkbox">
+                          <%= check_box_tag('user_ids[]', t.id) %>
+                        </div>
+                      </div>
                     </div>
                   <% end %>
                 <% end %>
