--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -393,7 +393,10 @@
     			<br>
 
     			<div class="row" style="background-color: #F3F3F3;">
-          <!-- gantt head -->
+            <div class="row" style="padding-left: 100px; text-align: left;">
+            <h3 style="width: 600px;">마감일 <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></h3>
+            </div>
+            <!-- gantt head -->
             <div class="bar2">
               <%for i in 0..10 %>
                 <% a = Date.today + i %>
