--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-2">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
+        <div class="panel-heading" role="tab" id="headingZero">
           <h4 class="panel-title">
             <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne" style="font-family: 'Jeju Gothic', sans-serif;">
               팀 홈으로 가기<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
@@ -74,10 +74,8 @@
                     <% if t.id != current_user.id %>
                       <div id="profile<%=idx%>">
                         <div class="row">
-                          <div class="col-xs-3">
+                          <div class="col-xs-9">
                             <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
-                          </div>
-                          <div class="col-xs-6">
                             <%=t.first_name%>
                           </div>
                           <div id="profile_me" class="col-xs-3 checkbox">
@@ -114,7 +112,7 @@
                         <div class="row">
                           <div class="col-xs-12">
                             <% chat.users.each do |inchat| %>
-                              <img class="img-circle" data-toggle="tooltip" data-placement="top" title="<%=inchat.first_name%>" src="<%=inchat.image%>" style="width: 20px; height: 20px;">
+                              <img class="img-circle" data-toggle="tooltip" data-placement="right" title="<%=inchat.first_name%>" src="<%=inchat.image%>" style="width: 20px; height: 20px;">
                             <% end %>
                             <button class="btn btn-danger btn-xs" type="submit" style="float:right;"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></button>
                           </div>
@@ -133,7 +131,7 @@
         <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              작업 분배 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+              할 일 <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
             </a>
           </h4>
         </div>
@@ -143,7 +141,7 @@
               <div class="col-sm-12">
                 <div data-toggle="tooltip" data-placement="bottom" title="작업 추가">
                   <button class="btn btn-new btn-xs" style="width: 100%;" type="button" data-toggle="collapse" data-target="#givetask" aria-expanded="false" aria-controls="collapseExample">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
                 </div>
               </div>
             </div>
@@ -174,10 +172,8 @@
                 <!-- My Profile -->
                 <div class="row">
                   <div class="col-sm-12">
-                    <div class="col-xs-3">
+                    <div class="col-xs-9">
                       <img class="img-circle" alt="profile" src="<%=current_user.image%>" style="width: 35px; height: 35px;">
-                    </div>
-                    <div class="col-xs-6">
                       <%=current_user.first_name%>
                     </div>
                     <div id="profile_me" class="col-xs-3 checkbox">
@@ -191,10 +187,8 @@
                   <% if t.id != current_user.id %>
                     <div class="row">
                       <div class="col-sm-12">
-                        <div class="col-xs-3">
+                        <div class="col-xs-9">
                           <img class="img-circle" alt="profile" src="<%=t.image%>" style="width: 35px; height: 35px;">
-                        </div>
-                        <div class="col-xs-6">
                           <%=t.first_name%>
                         </div>
                         <div id="profile_me" class="col-xs-3 checkbox">
@@ -217,6 +211,7 @@
             <div class="row">
               <div class="col-sm-12">
                 <hr />
+                <!-- 할 일 -->
                 <% current_user.tasks.where(:team_id => @team.id).order(duedate: :asc).each_with_index do |b,i| %>
                   <% sender = User.find(b.sender)%>
                   <% if b.wansungdo < 100 %>
@@ -253,6 +248,7 @@
                     <% end %>
                   <% end %>
                 <% end %>
+
               </div>
             </div>
           </div>
