--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -211,7 +211,7 @@
             <div class="row">
               <div class="col-sm-12">
                 <hr />
-                <!-- 할 일 -->
+                <h4><small>내가 할 일</small></h4>
                 <% current_user.tasks.where(:team_id => @team.id).order(duedate: :asc).each_with_index do |b,i| %>
                   <% sender = User.find(b.sender)%>
                   <% if b.wansungdo < 100 %>
@@ -229,8 +229,7 @@
                     <% end %>
                   <% end %>
                 <% end %>
-                <hr />
-                <!-- 시킨 일 -->
+                <h4><small>내가 시킨 일</small></h4>
                 <% Task.where(:team_id => @team.id, :sender => current_user.id).order(duedate: :asc).each_with_index do |b,i| %>
 
                   <% if b.wansungdo < 100 %>
